# drone-rescue-SAR

./: .gitignore  LICENSE  README.md  compose.yaml  drone.sh
dockerize/: README.md  SECURITY.md  TUTORIAL.md  apt-manifest.txt  xhost-grant.sh
drone_rescue_ws/src/drone_rescue_bringup/: package.xml  setup.cfg  setup.py
drone_rescue_ws/src/drone_rescue_bringup/config/: camera_shots.yaml  demo_config.yaml  diagnostics_aggregator.yaml  drone_params.yaml  environment.yaml  fastdds_profile.xml  no_fly_zones.yaml  pheromone_params.yaml  rosbag_record.yaml
drone_rescue_ws/src/drone_rescue_bringup/config/scenarios/: cluster.yaml  default.yaml  dying_swarm.yaml  hazard.yaml  low_visibility.yaml  sloped_terrain.yaml  sparse.yaml  sparse_victims.yaml
drone_rescue_ws/src/drone_rescue_bringup/launch/: demo.launch.py  earthquake_simulation.launch.py  flight_test.launch.py  multi_drone_simulation.launch.py  simulation.launch.py  visualization.launch.py
drone_rescue_ws/src/drone_rescue_bringup/rviz/: rescue_mission.rviz
drone_rescue_ws/src/drone_rescue_bringup/scripts/: run_demo.sh  validate_demo.sh
drone_rescue_ws/src/drone_rescue_bringup/test/integration/: test_demo_smoke.py  test_lifecycle_startup.py  test_namespace_isolation.py  test_sim_time_consistency.py
drone_rescue_ws/src/drone_rescue_coordination/: package.xml  setup.cfg  setup.py
drone_rescue_ws/src/drone_rescue_coordination/drone_rescue_coordination/: battery_monitor.py  camera_director.py  coverage_tracker.py  detection_filter.py  drone_controller.py  drone_executor.py  drone_executor_node.py  drone_health_monitor.py  environment_monitor.py  flight_test.py  lifecycle_manager.py  mission_manager.py  mission_manager_node.py  mission_manager_translator.py  pheromone_server.py  readiness_coordinator.py  sensor_degradation.py  victim_detector.py  zone_manager.py
drone_rescue_ws/src/drone_rescue_coordination/drone_rescue_coordination/lib/: allocation.py  auction.py  bt.py  composition.py  detection_cluster.py  grid_utils.py  mission_port_adapter.py  pid.py  projection.py  readiness.py  retry.py  sar_patterns.py  sector_geometry.py  surveyor_policy.py
drone_rescue_ws/src/drone_rescue_coordination/test/: test_affect_monitor.py  test_agl_detection_gate.py  test_allocation.py  test_arbitration.py  test_auction.py  test_auction_engine.py  test_batch_dispatch.py  test_behaviour_actions.py  test_behaviour_registry.py  test_change_state_client.py  test_composition.py  test_coverage_eta.py  test_decentralised_auction.py  test_detection_cluster.py  test_detection_range_decay.py  test_domain.py  test_drone_executor_node.py  test_elevation.py  test_events_build_variant.py  test_executive_supervisor.py  test_executor.py  test_feasibility.py  test_flight_plan_feasibility.py  test_intention_workspace.py  test_layer_boundaries.py  test_lifecycle_orchestrator.py  test_mission_allocation_split.py  test_mission_intention_hook.py  test_mission_manager_node.py  test_mission_port_adapter.py  test_mission_queries.py  test_mission_saga.py  test_mode_manager.py  test_motivation_strategy.py  test_motivations.py  test_motor_schema.py  test_navigation.py  test_no_fly_zone_enforcement.py  test_no_fly_zone_geometry.py  test_nofly_zone.py  (+26 more)
drone_rescue_ws/src/drone_rescue_dashboard/: package.xml  setup.cfg  setup.py
drone_rescue_ws/src/drone_rescue_dashboard/drone_rescue_dashboard/: bridge.py  dashboard_app.py  no_fly_zones.py  scene3d_view.py  scene_view.py
drone_rescue_ws/src/drone_rescue_dashboard/drone_rescue_dashboard/widgets/: __init__.py  _table_helpers.py  coverage_banner.py  drone_focus.py  fleet_rail.py  image_tile.py  inspector.py  live_trend.py  mission_bar.py  mission_log.py  state_table.py  victims_table.py
drone_rescue_ws/src/drone_rescue_dashboard/launch/: dashboard.launch.py
drone_rescue_ws/src/drone_rescue_dashboard/test/: test_bridge.py  test_dashboard_roster.py  test_live_trend.py
drone_rescue_ws/src/drone_rescue_mission_control/: package.xml  setup.cfg  setup.py
drone_rescue_ws/src/drone_rescue_mission_control/drone_rescue_mission_control/: analytics.py  bench.py  mission_control_app.py  mission_recorder.py  perf_sampler.py  process_supervisor.py  report.py  ros_control.py  scenario_loader.py
drone_rescue_ws/src/drone_rescue_mission_control/drone_rescue_mission_control/figures/: __init__.py  common.py  coverage.py  cumulative_confirmed.py  latency_cdf.py  pattern_boxplots.py  per_drone_battery.py  protocol.py  registry.py  survival_curve.py  task_histogram.py  threshold_roc.py  trajectory_heatmap.py
drone_rescue_ws/src/drone_rescue_mission_control/test/: test_figure_registry.py  test_mission_collector.py  test_perf_sampler.py  test_persistence.py  test_process_supervisor_errors.py  test_ros_control_call_service.py  test_run_finaliser.py  test_saga_confirmed_scoring.py  test_scenario_repository.py  test_scenario_runtime_params_filter.py  test_scenario_save.py  test_sloped_scenario.py
drone_rescue_ws/src/drone_rescue_msgs/: CMakeLists.txt  package.xml
drone_rescue_ws/src/drone_rescue_msgs/msg/: CoverageMetrics.msg  DroneHealth.msg  DronePeerState.msg  DroneReadiness.msg  DroneStatus.msg  FleetReadiness.msg  MissionEvent.msg  MissionState.msg  PheromoneMap.msg  SystemMode.msg  TaskAssignment.msg  TaskStatus.msg  VictimCandidate.msg  VictimDetection.msg  WeatherState.msg
drone_rescue_ws/src/drone_rescue_ui_common/: package.xml  setup.cfg  setup.py
drone_rescue_ws/src/drone_rescue_ui_common/drone_rescue_ui_common/: __init__.py  clock.py  command_port.py  constants.py  mission_lifecycle.py  motion.py  operator_view.py  palette.py  qos.py  qt_theme.py  run_view_model.py  style.py  view_model.py
drone_rescue_ws/src/drone_rescue_ui_common/test/: test_command_port.py  test_constants.py  test_mission_lifecycle.py  test_palette.py  test_run_view_model.py  test_view_model.py
drone_rescue_ws/src/drone_rescue_viz/: package.xml  setup.cfg  setup.py
drone_rescue_ws/src/drone_rescue_viz/drone_rescue_viz/: coverage_visualizer.py  drone_trails.py  pheromone_visualizer.py  telemetry_overlay.py  victim_visualizer.py
(+101 files in other folders)
