<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_rescue_mission_control</name>
  <version>1.0.0</version>
  <description>
    PyQt5 launcher for the drone-rescue SAR sim. Picks a scenario from a
    YAML registry, tweaks parameters, spawns the simulation + dashboard as
    a child process, records per-run metrics to JSONL, and compares K runs
    side-by-side with embedded matplotlib plots.
  </description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <!-- V5: PDF report generation. -->
  <exec_depend>python3-reportlab</exec_depend>

  <exec_depend>drone_rescue_msgs</exec_depend>
  <exec_depend>drone_rescue_bringup</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
