<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_rescue_viz</name>
  <version>0.0.0</version>
  <description>Visualization nodes for RViz</description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>MIT</license>

  <exec_depend>rviz_2d_overlay_msgs</exec_depend>
  <exec_depend>drone_rescue_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
